fixing breakpoints so the text doesn't overlap on medium screens

--- a/source/stylesheets/partials/_home_page.scss
+++ b/source/stylesheets/partials/_home_page.scss
@@ -35,9 +35,7 @@
 .pacemaker {
   width: 95%;
   margin: 0 auto;
-  h1, h2, h3, h4, h5, h6 {
-	text-align: center;
-  }
+  text-align: center;
 }
 
 .horizontal-line {
